--- a/scss/header.scss
+++ b/scss/header.scss
@@ -60,6 +60,7 @@ header {
                 border: none;
                 background-color: whitesmoke; 
                 padding-left: 15px;
+                outline: none;
             }
 
            
