--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,3 +247,183 @@ main{
      }
     
 }}
+
+.h_act{
+    z-index: 1050;
+    position: fixed;
+    background-color:  whitesmoke;
+    width: 100%;
+    top: 0;
+   
+}
+
+
+.modal {
+    position: fixed;
+    top: 50px;
+    left: 0;
+    z-index: 1050;
+    display: none;
+
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    background-color: whitesmoke;
+}
+
+.modal__dialog {
+    margin: 40px 350px 0 ;
+
+    p{
+        color: #ACACAC;
+        font-weight: 500;
+        font-size: 12px;
+    }
+
+    h2{
+        margin: 20px 0;
+        cursor: pointer;
+        &:hover{
+            color: #ACACAC;
+        }
+    }
+   
+}
+
+
+.y{
+    position: fixed;
+     left: 0;
+    z-index: 1050;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.show{
+    display: flex
+}
+
+.hide{
+    display: none;
+}
+
+.car_act {
+    color: #7000FF;    
+}
+
+.cart_item{
+    margin: 122px 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+
+    .right{
+        width: 856px;
+        min-height: 654px;
+        border: 1px solid #D9D9D9;
+        border-radius: 10px;   
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 30px;
+    .coont{
+        width: 800px;
+        height: 197px;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        border-bottom: #ACACAC 1PX solid;
+      
+      
+     .img_box{
+       width: 143px;
+       height: 186px;
+       display: flex;
+       align-items: center;
+       background-color: white;
+      
+       img{
+        width: 140px;
+        height: 140px;
+       }}
+
+       h3{
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+       color: #000000;
+       }
+
+       h4{
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 20px;
+        color: #000000;
+       }
+
+       .btn{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 89px;
+        height: 30px;
+        border: 1px solid black;
+        border-radius: 3px;
+        margin: 10px 0;
+        cursor: pointer;
+       }
+
+       button{
+       width: 80px;
+height: 32px;
+left: 396px;
+top: 773px;
+border: none;
+background: #EAEAF9;
+border-radius: 4px;
+color: #7000FF;
+    }
+    }
+
+    }
+
+    .left{
+        width: 418px;
+        height: 265px;
+        border: 1px solid #D9D9D9;
+        border-radius: 10px;
+        padding: 30px;
+
+        h2{
+            font-weight: 600;
+            font-size: 40px;
+            margin-bottom: 20px;
+        }
+
+        p{
+            font-weight: 500;
+            font-size: 16px;
+            margin-top: 9px;
+            color: #000000;
+        }
+
+        button{
+            width: 358px;
+            height: 32px;
+            border: none;
+            color: white;
+            margin-top: 50px;
+            background: #7000FF;
+            border-radius: 4px;
+        }
+    }
+}
+
+
+
+
+
