--- a/scss/style.scss
+++ b/scss/style.scss
@@ -425,5 +425,64 @@ color: #7000FF;
 
 
 
+.smth{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 100px 40px;
+    margin-top: 40px;
+    max-width: 90%;
+    
 
+    .item_content{
+       width: 230px;
+       height:  389px;
+       
+       .im{
+        width: 230px;
+        height: 300px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 12px;
+        img{
+            width: 230px;
+            height: 230px;
+        }
+       }
 
+       .txt{
+        width: 230px;
+        height: 50px;
+       }
+        
+
+        .name_genre{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            button{
+               
+                border: none;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+            
+        }
+
+        .reting{
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            img{
+                width: 20px;
+                height: 20px;
+            }
+            h6{
+                color: gray;
+            }
+        }
+    }}
